<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="392dp"
        android:layout_height="214dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@id/resultado"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/numero1"
        android:layout_width="142dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/numero1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/numero2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numero2"
        android:layout_width="142dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/numero2"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/numero1"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintTop_toBottomOf="@id/seleccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        />

    <Spinner
        android:id="@+id/seleccion"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:entries="@array/operaciones"
        app:layout_constraintTop_toBottomOf="@id/numero1"
        app:layout_constraintBottom_toTopOf="@id/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="287dp"
        android:layout_height="51dp"
        android:text="@string/resultado"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/numero1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />


</androidx.constraintlayout.widget.ConstraintLayout>